# robowallet-core

./: .gitignore  .vercelignore  LICENSE  README.md
bindings/arduino/: README.md  library.properties
bindings/arduino/examples/SendTransfer/: SendTransfer.ino
bindings/arduino/src/: RoboWallet.cpp  robowallet.h  robowallet_ffi.h
core/: .gitignore  Cargo.toml  README.md
core/.cargo/: config.toml
core/src/: crypto.rs  encoding.rs  ffi.rs  lib.rs  main.rs  network.rs  rpc.rs  transaction.rs
docs/: index.html
flasher/: README.md  index.html  manifest.json
robowallet-dashboard/: package-lock.json  package.json
robowallet-dashboard/src/app/: config.ts  globals.css  landing.css  layout.tsx  page.tsx
robowallet-dashboard/src/app/components/: AppWalletProvider.tsx
robowallet-dashboard/src/app/dashboard/: page.tsx
robowallet-dashboard/src/app/docs/: page.tsx
robowallet-dashboard/src/app/playground/: page.tsx
robowallet_program/: Anchor.toml  Cargo.toml
robowallet_program/src/: lib.rs
scripts/: build_all.py  inspect_history.js  mock_device.js  package-lock.json  package.json  roborelay.js  test_m2m.js  verify_core_tx.js  verify_program.js
sdk/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
src/: crypto.rs  ffi.rs  main.rs  transaction.rs
web/: index.html  styles.css
