[package]
name = "robowallet_core"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
panic-halt = "0.2.0"
ed25519-dalek = { version = "2.1.0", default-features = false, features = ["rand_core"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "proto-dhcpv4", "socket-dhcpv4"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
esp-alloc = "0.8.0"
esp-wifi = { version = "0.15.1", features = ["esp32c3", "wifi", "smoltcp"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }

[profile.release]
opt-level = "s"
lto = true
