[package]
name = "robowallet_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "robowallet_core"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "robowallet_fw"
path = "src/main.rs"
required-features = ["esp"]

# Host-side generator: builds real signed transactions and prints hex,
# used by scripts/verify_core_tx.js to validate against @solana/web3.js and devnet.
# Build: cargo build --bin txgen --no-default-features --features std-tools --target x86_64-pc-windows-msvc
[[bin]]
name = "txgen"
path = "src/bin/txgen.rs"
required-features = ["std-tools"]

[features]
default = ["esp"]
# Host-only tooling (txgen); never enable together with `esp`.
std-tools = []
esp = [
    "dep:esp-hal",
    "dep:esp-alloc",
    "dep:esp-wifi",
    "dep:esp-println",
    "dep:panic-halt",
    "dep:smoltcp",
]

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"], optional = true }
panic-halt = { version = "0.2.0", optional = true }
ed25519-dalek = { version = "2.1.0", default-features = false, features = ["rand_core"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "proto-dhcpv4", "socket-dhcpv4"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
esp-alloc = { version = "0.8.0", optional = true }
esp-wifi = { version = "0.15.1", features = ["esp32c3", "wifi", "smoltcp"], optional = true }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"], optional = true }

[profile.release]
opt-level = "s"
lto = true
