[package]
name = "robowallet_core"
version = "0.1.0"
edition = "2021"
description = "no_std Solana transaction construction and session-key vault helpers for embedded machine-to-machine payments (ESP32, RISC-V, bare-metal)."
license = "MIT"
repository = "https://github.com/SolM2M-Labs/robowallet-core"
homepage = "https://robowallet-core.vercel.app"
keywords = ["solana", "no_std", "embedded", "depin", "iot"]
categories = ["embedded", "no-std", "cryptography::cryptocurrencies"]
readme = "README.md"
exclude = ["target/", "*.a"]

[lib]
name = "robowallet_core"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "robowallet_fw"
path = "src/main.rs"
required-features = ["esp"]

# Host-side generator: builds real signed transactions and prints hex,
# used by scripts/verify_core_tx.js to validate against @solana/web3.js and devnet.
# Build: cargo build --bin txgen --no-default-features --features std-tools --target x86_64-pc-windows-msvc
[[bin]]
name = "txgen"
path = "src/bin/txgen.rs"
required-features = ["std-tools"]

[features]
# Default is the portable no_std library — builds on any host (and on crates.io).
default = []
# Firmware target deps (ESP32-C3). Required by the robowallet_fw binary.
esp = [
    "dep:esp-hal",
    "dep:esp-alloc",
    "dep:esp-wifi",
    "dep:esp-println",
    "dep:smoltcp",
]
# Host-only tooling (txgen, unit tests) — pulls in std. Never combine with `esp`.
std-tools = []

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"], optional = true }
# Panic handler for every no_std build (staticlib + firmware); unused under std-tools.
panic-halt = "0.2.0"
ed25519-dalek = { version = "2.1.0", default-features = false, features = ["rand_core"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "proto-dhcpv4", "socket-dhcpv4"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
esp-alloc = { version = "0.8.0", optional = true }
esp-wifi = { version = "0.15.1", features = ["esp32c3", "wifi", "smoltcp"], optional = true }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"], optional = true }

[profile.release]
opt-level = "s"
lto = true
